headline fixed while scrolling and main area z-index 0 to prevent objects to get infront of the  side bar

--- a/css/style-board.css
+++ b/css/style-board.css
@@ -1,4 +1,11 @@
+.section-header-board{
+    margin-bottom: 30px;
+    margin-top: 20px;
+    position: fixed;
+}
+
 .progress-section {
+    margin-top: 100px;
     margin-right: 25px;
 }
 
