--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ a {
 
 .w-100 {
     width: 100%;
+    z-index: 0;
 }
 
 .h-100 {
